--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:theme="@style/OnlinePharmacyTheme">
+    android:theme="@style/OnlinePharmacyTheme"
+    tools:showIn="@layout/activity_online_pharmacy" >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -24,8 +25,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:layout_below="@id/toolbar"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
+        android:id="@+id/constraintSearchHolder"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_editor_absoluteX="0dp">
 
@@ -57,5 +60,18 @@
 
     </android.support.constraint.ConstraintLayout>
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/constraintSearchHolder">
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/list_holder"
+            android:padding="4dp"
+            android:layout_width="wrap_content"
 
-    </android.support.constraint.ConstraintLayout>
+            android:layout_height="wrap_content">
+        </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
