--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -61,15 +61,14 @@
     </android.support.constraint.ConstraintLayout>
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/constraintSearchHolder">
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/list_holder"
             android:padding="4dp"
-            android:layout_width="wrap_content"
-
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </LinearLayout>
     </ScrollView>
